--- a/css/mostrar.css
+++ b/css/mostrar.css
@@ -5,7 +5,7 @@
     font-family: "Poppins", sans-serif;
 }
 body {
-    background: url("https://images.unsplash.com/photo-1519752594763-2633d8d4ea29?q=80&w=1170&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
+    background: url("https://images.unsplash.com/photo-1573763688302-374349a7f3bb");
     background-size: cover;
     background-position: center;
     min-height: 100vh;
@@ -58,8 +58,8 @@ h1 {
 .input-container img {
     position: absolute;
     right: 24px;
-    top: 20%;
-    margin-top: 5px;
+    top: 10%;
+    margin-top: 10px;
 }
 .submit-button {
     display: block;
