--- a/css/style.css
+++ b/css/style.css
@@ -69,7 +69,6 @@ h1 {
 }
 .submit-button:hover {
     background-color: #36d7ffc5;
-}* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -117,7 +116,7 @@ h1 {
    position: relative;
    width: 100%;
    height: 50px;
-   margin: 30px 0;
+   margin: 20px 0;
 }
 .input-container input {
     width: 100%;
@@ -137,7 +136,7 @@ h1 {
 .input-container img {
     position:fixed;
     right: 50px;
-    top: 51%;
+    top: 54%;
     bottom: 20%;
     margin-top: 2px;
 }
@@ -149,8 +148,17 @@ h1 {
     border-radius: 10px;
     color: #fff;
     font-weight: 700;
-    margin-top: 24px;
+    margin-top: 10px;
     cursor: pointer;
     outline: none;
     font-size: 16px;
+}
+
+.login a{
+    position: absolute;
+    right: 45%;
+    font-size: 16px;
+    color: #fff;
+    font-weight: 500;  
+    text-decoration: none;
 }
