--- a/css/cadastro.css
+++ b/css/cadastro.css
@@ -5,6 +5,7 @@
     box-sizing: border-box;
     font-family: "Poppins", sans-serif;
 }
+
 body {
     background: url("https://images.unsplash.com/photo-1573763688302-374349a7f3bb");
     background-size: cover;
@@ -31,12 +32,13 @@ h1 {
 }
 
 label {
-  display: block;
-  margin-top: 15px;
-  font-weight: bold;
+    display: block;
+    margin-top: 15px;
+    font-weight: bold;
 }
 
-input, textarea {
+input,
+textarea {
     width: 100%;
     height: 100%;
     background: transparent;
@@ -64,5 +66,5 @@ button {
 }
 
 button:hover {
-  background-color: #0095a0;
+    background-color: #0095a0;
 }
