--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@
     box-sizing: border-box;
     font-family: "Poppins", sans-serif;
 }
+
 body {
     background: url("https://images.unsplash.com/photo-1573763688302-374349a7f3bb");
     background-size: cover;
@@ -13,6 +14,7 @@ body {
     align-items: center;
     justify-content: center;
 }
+
 .container {
     width: 420px;
     background: transparent;
@@ -21,17 +23,20 @@ body {
     border-radius: 10px;
     padding: 30px 40px;
 }
+
 h1 {
     font-size: 36px;
     text-align: center;
     color: #fff;
 }
+
 .input-container {
-   position: relative;
-   width: 100%;
-   height: 50px;
-   margin: 30px 0;
+    position: relative;
+    width: 100%;
+    height: 50px;
+    margin: 20px 0;
 }
+
 .input-container input {
     width: 100%;
     height: 100%;
@@ -44,16 +49,19 @@ h1 {
     color: #fff;
     padding: 20px 45px 20px 20px;
 }
+
 .input-container input::placeholder {
     color: #fff;
 }
+
 .input-container img {
-    position: absolute;
-    right: 25px;
-    top: 25%;
-    bottom: 25%;
-    margin-top: 30px;
+    position: fixed;
+    right: 50px;
+    top: 43%;
+    bottom: 20%;
+    margin-top: 2px;
 }
+
 .submit-button {
     width: 100%;
     height: 50px;
@@ -67,6 +75,7 @@ h1 {
     outline: none;
     font-size: 16px;
 }
+
 .submit-button:hover {
     background-color: #36d7ffc5;
     margin: 0;
@@ -74,15 +83,7 @@ h1 {
     box-sizing: border-box;
     font-family: "Poppins", sans-serif;
 }
-body {
-    background: url("https://images.unsplash.com/photo-1573763688302-374349a7f3bb");
-    background-size: cover;
-    background-position: center;
-    align-items: center;
-    min-height: 100vh;
-    display: flex;
-    justify-content: center;
-}
+
 .wrapper {
     display: flex;
     flex-direction: column;
@@ -91,55 +92,33 @@ body {
     min-height: 100vh;
     gap: 20px;
 }
+
 .logo {
     width: 420px;
     text-align: center;
 }
+
 .logo img {
     width: 100%;
     height: auto;
 }
+
 .container {
     width: 420px;
+    height: 400px;
     background: transparent;
     border: 2px solid rgba(255, 255, 255, .2);
     backdrop-filter: blur(20px);
     border-radius: 10px;
     padding: 30px 40px;
 }
+
 h1 {
     font-size: 36px;
     text-align: center;
     color: #fff;
 }
-.input-container {
-   position: relative;
-   width: 100%;
-   height: 50px;
-   margin: 20px 0;
-}
-.input-container input {
-    width: 100%;
-    height: 100%;
-    background: transparent;
-    border: none;
-    outline: none;
-    border: 2px solid rgba(255, 255, 255, .2);
-    border-radius: 10px;
-    font-size: 16px;
-    color: #fff;
-    padding: 20px 45px 20px 20px;
-}
-.input-container input::placeholder {
-    color: #fff;
-}
-.input-container img {
-    position:fixed;
-    right: 50px;
-    top: 54%;
-    bottom: 20%;
-    margin-top: 2px;
-}
+
 .submit-button {
     width: 100%;
     height: 50px;
@@ -154,11 +133,52 @@ h1 {
     font-size: 16px;
 }
 
-.login a{
+.login {
     position: absolute;
-    right: 45%;
+    width: 81%;
+    height: 50px;
+    background-color: #00cdf1c5;
+    border: none;
+    border-radius: 10px;
     font-size: 16px;
+    position: fixed;
     color: #fff;
-    font-weight: 500;  
+    font-weight: 500;
     text-decoration: none;
+    margin-top: 20px;
+}
+
+.login a {
+    font-size: 16px;
+    position: fixed;
+    padding: 10px 53px 10px 10px;
+    left: 43%;
+    color: #fff;
+    font-weight: 700;
+    text-decoration: none;
+
+}
+
+.whats img {
+    position: relative;
+    right: 5px;
+    top: 6px;
+}
+
+.whats a {
+    text-decoration: none;
+    text-align: center;
+    color: #fff;
+}
+
+.insta img {
+    position: relative;
+    right: 5px;
+    top: 6px;
+}
+
+.insta a {
+    text-decoration: none;
+    text-align: center;
+    color: #fff;
 }
